@@ -9,6 +9,7 @@ DIST README-3.10.0.BFQ 10454 SHA256 76b613f067b4e784333ab5e1b0999aa40aeaad37230e
 DIST README-3.9.5.BFQ 9583 SHA256 88e76c5a8259b63c4534b9e154309cff2318f80506cbf469c7c8dff97474d4d5 SHA512 29e4f505eff76e2318fbecf0a7dc3f539103e2c1220e1445be1b7aa3872ea9fe3fbdb95a5cffb728ddc45bea5239a88c81d4d116b122dc795b59443c83549ca0 WHIRLPOOL 178000ac40952b903839a23d92e443be7c11ae262d674ea6f827d6eb49e28868f63bbf1eae1eb42e5eaec869504f5fc6d9c23937ac9b33e868059267b328edc5
 DIST README-3.9.6.BFQ 9583 SHA256 88e76c5a8259b63c4534b9e154309cff2318f80506cbf469c7c8dff97474d4d5 SHA512 29e4f505eff76e2318fbecf0a7dc3f539103e2c1220e1445be1b7aa3872ea9fe3fbdb95a5cffb728ddc45bea5239a88c81d4d116b122dc795b59443c83549ca0 WHIRLPOOL 178000ac40952b903839a23d92e443be7c11ae262d674ea6f827d6eb49e28868f63bbf1eae1eb42e5eaec869504f5fc6d9c23937ac9b33e868059267b328edc5
 DIST aufs-sources-3.10_p20130630.tar.xz 146092 SHA256 42be2295033458670909948e774c765ed45544b7bcbeb07d5e1472f696f3fb00 SHA512 8ac396f606a3117cc240595c0defba60203b370ce3429f0c10615c083625d455cb2128fa3f347732e69b8dad2c3284ffa5f27a4f6b7ef0e92ac011685f169fd0 WHIRLPOOL 7da2b81c203cbfbebe416812b265ddd3d6c7c5d7d232cf92ccb156ed19f1f2f2a29872653c3e4a23b7b004f798c525e2df5660f085822753c437656205cfc788
+DIST aufs-sources-3.10_p20130708.tar.xz 146104 SHA256 57bf9d28d15e4243525bea3b44c138bb88eff37c673cf6423e4eafae06fe885a SHA512 1dbfc5a3394b6885ae64853c6ab94222d11bbac2f2cc8c829348a0728b3f36a4435d96e33e2c40a549e13753571a007890c3eda69af100a51bdf6bdc1644e2bd WHIRLPOOL d1903438f59ab524ebbfabb56a8b310cd245d3177bfcb50f729f6194322cfec3ea859b16c3c1145a89a9101e20fe3a99731f852bdb7c59ff8356c579238a2563
 DIST aufs-sources-3.9_p20130520.tar.xz 145724 SHA256 04796f643635c5eb021d0193fa4b4ba624c88946962cf9977b5d7725d2063a41 SHA512 615852a86be94650d6ce70a0e390ce468748c469691d280fa257f51e94ae64d523bd0e5fa47570fc0fe460324ef7141fc0e7aac49d1b034618cc8e45a28b87b6 WHIRLPOOL e2c1c08deaf21930d3b710ce70f724e140596595547391bdefe3d30ef1f79d7dd2d7a32970c83bbc471370cf7a3f8c1650e70bf7153b857ac0c7cf6ead712635
 DIST deblob-3.10 117299 SHA256 d48cad04fab6a802b3a3e34955c8e35b539c2441f9a62522ec5a132c3a5ae684 SHA512 7b30f0f97ed97bf6b096d4a321b4b1e62f4b48f07972f2511870c3eaaf4f3877b0c6af2f30f6b985edf9c9c79267d40448b504c59016acfe06374630d1fdcba9 WHIRLPOOL 03a5963367cc6cb4f87e3d315ab61a8b3cb1fe577b20d7e2fb6ad83464075b3ed8176f543bb4c3b4e607d78cd55ef940f446bb75be09eb7496321930413ce2b9
 DIST deblob-3.9 116031 SHA256 0fb17070d5aaf226fca39f70df68b7d482e4f803e0ef974626440a28c26b5dc3 SHA512 e014add3728dc3fa0b938f3849ccba60e82354a811eefe6761036aa5e5b7bda39960758bb918506ed3cd0758360729144304227ab2cc3f5489813204f0053d3d WHIRLPOOL 4e65c3a6ba5dd5d850567fcd347167245b527b098ffa390bf0e9fb9778ddb06cd48553f697e2fe7cb793714b520dbb5b90b9948a339663a315e299272aca09ef
