@@ -1,5 +1,10 @@
 
 
+*lh-sources-3.10.0-r2 (08 Jul 2013)
+
+  08 Jul 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.10.0-r2.ebuild:
+  Bump to latest aufs release
+
 *lh-sources-3.9.9 (05 Jul 2013)
 
   05 Jul 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.9.ebuild:
